--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,5 @@
 <div id="about">
-  <% content(:about).split("\n").each do |text| %>
+  <% :about.l.split("\n").each do |text| %>
     <%= textilize(text) %>
   <% end %>
 </div>
