--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,9 @@
-<h1><%= :welcome.l %></h1>
-<% if cookies[:first_connection].nil? %>
+<% if false %>
   <div id="choose_language">
     <h2><%= :before_continuing.l %></h2>
     <% form_for :user_pref, :controller => "welcome", :action => "choose_languages" do |f| %>
       <p>
         <label for="interface_language_code"><%= :choose_interface_language_code.l %></label>
-        <%= render :partial => "languages/collection_select", :locals => {:object => :user_pref, :usage => :interface_language_code} %>
         <%= collection_select :user_pref, :interface_language_code, Language.find(:all, :select => "name, id"), :id, :name %>
       </p>
       <p>
@@ -26,15 +24,16 @@
     <form>
       <div id="search_form">
         <%= render :partial => "languages/collection_select", :locals => {:object => :search_form, :usage => :search_term_language_code} %>
-        <input type="text" name="search_term" id="search_term" value="<%= :search.l %>" size="50"/><br />
+        <input type="text" name="search_term" id="search_term" size="50"/><br />
         <input type="submit" name="search_submit" id="search_submit" value="<%= :search.l %>" />
         <input type="submit" name="random_search_submit" id="random_search_submit" value="<%= :random_term.l %>" />
-      </div>
-      <div id="search_actions" class="actions">
-        <%= link_to :preferences.l, "#" %><br />
-        <%= link_to :advanced_search.l, "#" %><br />
+        <div id="search_actions" class="actions">
+          <%= link_to :preferences.l, "#" %> |
+          <%= link_to :advanced_search.l, "#" %>
+        </div>
       </div>
     </form>
   </div>
+  <br class="clear" />
 <% end %>
 
