--- a/app/views/languages/new.html.erb
+++ b/app/views/languages/new.html.erb
@@ -24,6 +24,11 @@
   </p>
 
   <p>
+    <b>Code RFC3066</b><br />
+    <%= f.text_field :code_RFC_3066 %>
+  </p>
+
+  <p>
     <%= f.submit "Create" %>
   </p>
 <% end %>
