decided to use domain_meta model to handle domain translations

--- a/app/views/domains/show.html.erb
+++ b/app/views/domains/show.html.erb
@@ -1,4 +1,3 @@
-<%= @domain.name_fre %>
+<%= render :partial => @domain %>
 
-<%= link_to 'Edit', edit_domain_path(@domain) %> |
 <%= link_to 'Back', domains_path %>
