--- a/app/views/domains/new.html.erb
+++ b/app/views/domains/new.html.erb
@@ -1,22 +1,17 @@
-<h1>Nouveau Domaine</h1>
+<h1><%= :new_domain.l("Nouveau Domaine") %></h1>
 <%= error_messages_for :domain %>
 <% form_for(@domain) do |f| %>
-  <p>
-    <%= f.label :parent_id, "Parent" %>
-    <br/>
-    <%= f.collection_select :parent_id, Domain.find(:all), :id, :name_fre %>
-  </p>
   <% @domain.domain_metas.each do |m| %>
     <% fields_for "domain[domain_metas_attributes][]", m do |m_fields| %>
       <fieldset>
         <legend><%= m.language.public_name %></legend>
         <p>
-          <%= m_fields.label :name, "Nom" %>
+          <%= m_fields.label :name, :name.l %>
           <br/>
           <%= m_fields.text_field :name %>
         </p>
         <p>
-          <%= m_fields.label :description, "Description" %>
+          <%= m_fields.label :description, :description.l %>
           <br/>
           <%= m_fields.text_field :description %>
         </p>
@@ -25,7 +20,7 @@
     <% end %>
   <% end %>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit :create.l %>
   </p>
 <% end %>
-<%= link_to 'Back', domains_path %>
+<%= link_to :back.l, domains_path %>
