--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -5,7 +5,7 @@
 <% form_for(@entry) do |f| %>
   <p>
     <b><%= :language.l("Language") %></b><br />
-    <%= language_select :entry, :language %>
+    <%= language_select :entry, :language_id %>
   </p>
 
   <p>
