--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,13 +1,2 @@
-<p>
-  <b>Language:</b>
-  <%=h @entry.language %>
-</p>
-
-<p>
-  <b>Value:</b>
-  <%=h @entry.value %>
-</p>
-
-
-<%= link_to 'Edit', edit_entry_path(@entry) %> |
-<%= link_to 'Back', entries_path %>
+<%= render :partial => @entry %>
+<%= link_to :back.l("Back"), entries_path, :class => "actions" %>
